Update dependencies, remove java.desktop beep
- Gradle 6.5.1 -> 7.4.2
- Java 15 -> 17
- JavaFX 15 -> 17
    - removed javafxplugin
- richtextfx 0.10.5 -> 0.10.9
    - add explicit dependencies for undofx, flowless